--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@ body{
 
 .container{
     background:rgba(250, 250, 250, 0.747);
-    width: 450px;
+    width: 550px;
     height: 230px;
     margin: auto;
     padding: 20px;
@@ -49,4 +49,60 @@ footer{
     position: fixed;
     bottom: 0px;
     left: 0px;
+}
+
+/*Media Querys 576*/
+@media (max-width: 570px){
+    body{
+        background: url("../images/bgClock_small.jpg");
+        background: cover;
+    }
+
+    .container{
+        width: 250px;
+        height: 230px;
+    }
+
+    .fecha,.hora_minuto_segundo{
+        height: 90px;
+        width: 230px;
+    }
+    
+    .dia,.dia_numero,.mes,.fullyear,.hora,.minuto,.segundo,.puntos_separacion,.am_pm{
+        font-size: 15px;
+    }
+
+
+    footer{
+        text-align: center;
+        font-size: 10px;
+        font-weight: bold;
+    }
+}
+
+@media (min-width: 571px) and (max-width:770px) {
+    body{
+        background: url("../images/bgClock_medium.jpg");
+        background: cover;
+    }
+
+    .container{
+        width: 400px;
+        height: 230px;
+    }
+
+    .fecha,.hora_minuto_segundo{
+        height: 90px;
+        width: 300px;
+    }
+    
+    .dia,.dia_numero,.mes,.fullyear,.hora,.minuto,.segundo,.puntos_separacion,.am_pm{
+        font-size: 18px;
+    }
+
+
+    footer{
+        text-align: center;
+        font-size: 15px;
+    }
 }
